# GalTransl

./: .gitignore  README.md  README_EN.md  build_release.py  requirements.txt  run_GalTransl.py  run_backend.py  run_desktop_dev.bat
Dict/: 00通用字典_符号_译后.txt  00通用字典_译前.txt  00通用字典_译后.txt  01H字典_矫正_译前.txt  GPT字典.txt
GalTransl/: COpenAI.py  CSentense.py  CSerialize.py  Cache.py  ConfigHelper.py  DefaultProjectConfig.py  Dictionary.py  Loader.py  Problem.py  Runner.py  Service.py  Utils.py  __init__.py  __main__.py  server.py  server_runtime.py
GalTransl/Backend/: BaseTranslate.py  ForGalJsonTranslate.py  ForGalTranslate.py  ForGalTsvTranslate.py  ForNovelTranslate.py  GPT4Translate.py  GPT4TranslateNew.py  GenDic.py  Prompts.py  SakuraTranslate.py
GalTransl/Frontend/: LLMTranslate.py
desktop/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/app/: App.tsx
plugins/: readme.md
sampleProject/: config.inc.yaml  项目GPT字典.txt
tests/: test_cache_compact_preserves_problem.py  test_cache_problem_refresh.py  test_cache_problem_refresh_e2e.py  test_incremental_cache_append.py  test_proxy_config_fallback.py  test_runtime_file_progress_mapping.py  test_runtime_filename_mapping.py  test_runtime_progress_duplicate_keys.py  test_sakura_endpoint_normalization.py  test_split_chunk_runtime_index.py  test_translate_refactor_regressions.py
translation_guidelines/: Game.md
(+135 files in other folders)
